<resources>
    <string name="app_name">Sport Game</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="football">Футбол</string>
    <string name="tennis">Теннис</string>
    <string name="hockey">Хоккей</string>
    <string name="boxing">Бокс</string>
    <string name="win">Победа!</string>
    <string name="lose">Не повезло</string>
    <string name="loseAddText">Время попробовать еще раз!</string>
    <string name="money">монет</string>
    <string name="result">Счёт</string>
    <string name="toResult">Далее</string>
    <string name="getPresent">Получить подарок</string>
    <string name="toMain">На главную</string>
    <string name="play">Играть</string>
    <string name="choiceTeam">Выбрать команду</string>
    <string name="stake">Ставка</string>
    <string name="coef">Коэффициент 2.0</string>
    <string name="getResult">Узнать результат</string>
    <string name="close">Закрыть</string>
    <string name="needStake">Необходимо сделать ставку</string>
    <string name="lessStake">Недостаточно средств для этой ставки</string>
    <string name="team">Необходимо выбрать команду</string>
</resources>