<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.ResultFragment"
    android:background="@color/cream">

    <androidx.cardview.widget.CardView
        android:id="@+id/moneyCardViewStake"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:cardElevation="5dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="15dp"
            android:src="@drawable/money"
            android:layout_marginTop="5dp" />

        <TextView
            android:id="@+id/moneyTextViewStake"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:gravity="center" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/ourTeamCard"
        android:layout_width="120dp"
        android:layout_height="110dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="30dp"
        app:cardElevation="5dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ourTeamImage"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/opponentCard"
        android:layout_width="120dp"
        android:layout_height="110dp"
        android:layout_marginTop="120dp"
        android:layout_marginStart="30dp"
        app:cardElevation="5dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/opponentImage"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"/>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/VS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginStart="30dp"
        android:layout_marginTop="150dp"
        app:layout_constraintStart_toEndOf="@id/opponentCard"
        app:layout_constraintTop_toTopOf="parent"
        android:text="VS"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="290dp">


        <Button
            android:id="@+id/countryBtn"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:text="@string/choiceTeam"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textAllCaps="false"/>


    </LinearLayout>

    <TextView
        android:id="@+id/stakeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:gravity="center"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/stake"
        android:text="@string/stake"/>

    <LinearLayout
        android:id="@+id/stake"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="390dp">

        <EditText
            android:id="@+id/stakeEdit"
            android:layout_width="100dp"
            android:layout_height="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="16sp"
            android:inputType="number"/>

    </LinearLayout>

    <TextView
        android:id="@+id/coefficient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:gravity="center"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stake"
        android:text="@string/coef"/>


    <Button
        android:id="@+id/startMatchBtn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/getResult"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="520dp"
        android:backgroundTint="@color/yellow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textAllCaps="false"/>


</androidx.constraintlayout.widget.ConstraintLayout>

