<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity"
    android:background="@color/cream">

    <androidx.cardview.widget.CardView
        android:id="@+id/moneyCardView"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:cardElevation="5dp"
        app:cardCornerRadius="15dp"
        android:layout_alignParentEnd="true">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="15dp"
            android:src="@drawable/money"
            android:layout_marginTop="5dp" />

        <TextView
            android:id="@+id/moneyTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:gravity="center" />

    </androidx.cardview.widget.CardView>

    <!--    можно и через ресайклер-->
    <androidx.cardview.widget.CardView
        android:id="@+id/footballCardView"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="80dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:cardElevation="5dp"
        app:cardCornerRadius="8dp">

        <ImageView
            android:layout_width="111dp"
            android:layout_height="120dp"
            android:layout_marginStart="15dp"
            android:src="@drawable/img"
            android:scaleX="1.3"
            android:scaleY="1.3" />

        <Button
            android:id="@+id/playFootballBtn"
            android:layout_width="121dp"
            android:layout_height="50dp"
            android:text="@string/play"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_marginStart="211dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/green"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textAllCaps="false"/>


        <TextView
            android:layout_width="121dp"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginStart="211dp"
            android:layout_marginTop="65dp"
            android:text="@string/football"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/tennisCardView"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:cardElevation="5dp"
        app:cardCornerRadius="8dp"
        android:layout_below="@id/footballCardView">

        <ImageView
            android:layout_width="111dp"
            android:layout_height="120dp"
            android:layout_marginStart="15dp"
            android:src="@drawable/img_2"
            android:scaleX="1.3"
            android:scaleY="1.3" />

        <Button
            android:id="@+id/playTennisBtn"
            android:layout_width="121dp"
            android:layout_height="50dp"
            android:text="@string/play"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_marginStart="211dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/green"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textAllCaps="false"/>


        <TextView
            android:layout_width="121dp"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginStart="211dp"
            android:layout_marginTop="65dp"
            android:text="@string/tennis"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/hockeyCardView"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:cardElevation="5dp"
        app:cardCornerRadius="8dp"
        android:layout_below="@id/tennisCardView">

        <ImageView
            android:layout_width="111dp"
            android:layout_height="120dp"
            android:layout_marginStart="15dp"
            android:src="@drawable/img_4"
            android:scaleX="1.3"
            android:scaleY="1.3" />

        <Button
            android:id="@+id/playHockeyBtn"
            android:layout_width="121dp"
            android:layout_height="50dp"
            android:text="@string/play"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_marginStart="211dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/green"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textAllCaps="false"/>


        <TextView
            android:layout_width="121dp"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginStart="211dp"
            android:layout_marginTop="65dp"
            android:text="@string/hockey"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/boxingCardView"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:cardElevation="5dp"
        app:cardCornerRadius="8dp"
        android:layout_below="@id/hockeyCardView">

        <ImageView
            android:layout_width="111dp"
            android:layout_height="120dp"
            android:layout_marginStart="15dp"
            android:src="@drawable/img_5"
            android:scaleX="1.3"
            android:scaleY="1.3" />

        <Button
            android:id="@+id/playBoxingBtn"
            android:layout_width="121dp"
            android:layout_height="50dp"
            android:text="@string/play"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_marginStart="211dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/green"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textAllCaps="false"/>


        <TextView
            android:layout_width="121dp"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginStart="211dp"
            android:layout_marginTop="65dp"
            android:text="@string/boxing"/>

    </androidx.cardview.widget.CardView>

</RelativeLayout>


